--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,33 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Set Hibernate SQL query logging to DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+YELLOW.CARD.POINTS = -1
+RED.CARD.POINTS = -4
+MINUTES.POINTS = 1
+MINUTES.THRESHOLD = 60
+PENALTY.COMMITTED.POINTS = -4
+FOULS.COMMITTED.THRESHOLD = -2
+PENALTY.MISSED.POINTS = -4
+SAVES.POINTS = 2
+SAVES.THRESHOLD = 3
+GOALS.CONCEDED.THRESHOLD = 2
+PENALTIES.SAVED.POINTS = 5
+GK.CLEAN.SHEET.POINTS = 6
+DEF.CLEAN.SHEET.POINTS = 4
+MID.CLEAN.SHEET.POINTS = 2
+GK.GOALS.SCORED.POINTS = 10
+GK.ASSISTS.POINTS = 7
+DEF.GOALS.SCORED.POINTS = 6
+MID.GOALS.SCORED.POINTS = 4
+ATT.GOALS.SCORED.POINTS = 4
+DEF.ASSISTS.POINTS = 4
+MID.ASSISTS.POINTS = 3
+ATT.ASSISTS.POINTS = 3
+SHOT.ACCURACY.THRESHOLD = 70
+RATING.POINTS = 1
+FRACTION.TO.PERCENT = 100
+RATING.THRESHOLD.1 = 8
+RATING.THRESHOLD.2 = 8.5
+RATING.THRESHOLD.3 = 9
+RATING.THRESHOLD.4=5
