--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,12 @@
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 			<version>3.1.5</version>
 		</dependency>
-
-
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
+		</dependency>
 
 
 		<dependency>
